--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile project(':jsci')
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.pubnub:pubnub-android:3.7.5'
     compile 'com.google.android.gms:play-services-location:8.4.0'
-    compile project(':jsci')
+    compile 'com.android.support:support-v4:23.2.0'
 }
