--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.pubnub:pubnub-android:3.7.5'
     compile 'com.google.android.gms:play-services-location:8.4.0'
-    compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.android.support:cardview-v7:23.+'
 }
