--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':jsci')
     compile 'com.android.support:appcompat-v7:23.2.0'
-    //compile 'com.pubnub:pubnub-android:3.7.7'
-    compile 'com.pubnub:pubnub-android-debug:3.7.+'
+    compile 'com.pubnub:pubnub-android:3.7.7'
+//    compile 'com.pubnub:pubnub-android-debug:3.7.+'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.android.support:cardview-v7:23.+'
     compile 'io.branch.sdk.android:library:1.+'
