--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name="io.branch.referral.BranchApp">
         <activity android:name=".MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask">
@@ -22,15 +23,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <!-- Branch.io Deeplink -->
+            <!-- Deeplink opens Main Activity todo: create a launcher activity -->
             <intent-filter>
-                <data android:scheme="@string/branch_id" android:host="open" />
+                <!--<data android:scheme="@string/uri_scheme" android:host="open" />-->
+                <data android:scheme="@string/uri_scheme" android:host="@string/uri_host"/>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
-        <activity android:name=".CompassActivity"/>
+        <activity android:name=".CompassActivity">
+            <meta-data android:name="io.branch.sdk.auto_link_keys" android:value="channel_name" />
+        </activity>
         <activity android:name=".ContactsPickerActivity"/>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -39,4 +43,9 @@
         <meta-data android:name="io.branch.sdk.BranchKey.test" android:value="@string/branch_key_test" />
     </application>
 
+    <receiver android:name="io.branch.referral.InstallListener" android:exported="true">
+        <intent-filter>
+            <action android:name="com.android.vending.INSTALL_REFERRER" />
+        </intent-filter>
+    </receiver>
 </manifest>
