--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name="io.branch.referral.BranchApp">
         <activity android:name=".MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask">
@@ -24,6 +25,7 @@
         </activity>
         <activity android:name=".CompassActivity">
             <meta-data android:name="io.branch.sdk.auto_link_keys" android:value="yip_channel" />
+            <meta-data android:name="io.branch.sdk.auto_link_request_code" android:value="@integer/deeplink_success" />
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -39,8 +41,11 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_geo_key"/>
+
+        <!-- Set to true to use Branch_Test_Key -->
+        <meta-data android:name="io.branch.sdk.TestMode" android:value="true" />
         <meta-data android:name="io.branch.sdk.BranchKey" android:value="@string/branch_key_live" />
-        <!--<meta-data android:name="io.branch.sdk.BranchKey.test" android:value="@string/branch_key_test" />-->
+        <meta-data android:name="io.branch.sdk.BranchKey.test" android:value="@string/branch_key_test" />
     </application>
 
     <receiver android:name="io.branch.referral.InstallListener" android:exported="true">
