--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,56 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.joseph.yipandroid3">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.joseph.yipandroid3">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.READ_CONTACTS" />
+<uses-permission android:name="android.permission.SEND_SMS" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name="io.branch.referral.BranchApp">
-        <activity android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTask">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".CompassActivity">
-            <meta-data android:name="io.branch.sdk.auto_link_keys" android:value="yip_channel" />
-            <meta-data android:name="io.branch.sdk.auto_link_request_code" android:value="@integer/deeplink_success" />
-
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="@string/uri_scheme" />
-                <data android:scheme="@string/uri_scheme_secure" />
-                <data android:scheme="@string/uri_scheme_nothappy" />
-                <!--<data android:host="@string/uri_host" />-->
-            </intent-filter>
-        </activity>
-        <activity android:name=".ContactsPickerActivity"/>
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_geo_key"/>
-
-        <!-- Set to true to use Branch_Test_Key -->
-        <meta-data android:name="io.branch.sdk.TestMode" android:value="true" />
-        <meta-data android:name="io.branch.sdk.BranchKey" android:value="@string/branch_key_live" />
-        <meta-data android:name="io.branch.sdk.BranchKey.test" android:value="@string/branch_key_test" />
-    </application>
-
-    <receiver android:name="io.branch.referral.InstallListener" android:exported="true">
+<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name"
+    android:supportsRtl="true" android:theme="@style/AppTheme" android:name="io.branch.referral.BranchApp">
+    <activity android:name=".MainActivity" android:label="@string/app_name" android:launchMode="singleTask">
         <intent-filter>
-            <action android:name="com.android.vending.INSTALL_REFERRER" />
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
-    </receiver>
+    </activity>
+    <activity android:name=".CompassActivity">
+        <meta-data android:name="io.branch.sdk.auto_link_keys" android:value="yip_channel" />
+        <meta-data android:name="io.branch.sdk.auto_link_request_code" android:value="@integer/deeplink_success" />
+
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="@string/uri_scheme" />
+            <data android:scheme="@string/uri_scheme_secure" />
+            <data android:scheme="@string/uri_scheme_nothappy" />
+            <!--<data android:host="@string/uri_host" />-->
+        </intent-filter>
+    </activity>
+    <activity android:name=".ContactsPickerActivity" />
+    <meta-data android:name="com.google.android.geo.API_KEY"
+        android:value="@string/google_app_id" />
+
+    <!-- Set to true to use Branch_Test_Key -->
+    <meta-data android:name="io.branch.sdk.TestMode" android:value="true" />
+    <meta-data android:name="io.branch.sdk.BranchKey" android:value="@string/branch_key_live" />
+    <meta-data android:name="io.branch.sdk.BranchKey.test" android:value="@string/branch_key_test" />
+</application>
+
+<receiver android:name="io.branch.referral.InstallListener" android:exported="true">
+    <intent-filter>
+        <action android:name="com.android.vending.INSTALL_REFERRER" />
+    </intent-filter>
+</receiver>
 </manifest>
