--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,10 @@
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 <uses-permission android:name="android.permission.INTERNET" />
 <uses-permission android:name="android.permission.READ_CONTACTS" />
+<uses-permission-sdk-23 android:name="android.permission.READ_CONTACTS" />
 <uses-permission android:name="android.permission.SEND_SMS" />
+<uses-permission android:name="android.permission.WRITE_CONTACTS" />
+<uses-permission-sdk-23 android:name="android.permission.WRITE_CONTACTS" />
 
 <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name"
     android:supportsRtl="true" android:theme="@style/AppTheme" android:name="io.branch.referral.BranchApp">
